Styled and editing game logic

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans"/>
 	</head>
 	<body>
-		<div class='col-sm-12' id='container'>
-			<div id='title'>
-				<h1>StarTrek Trivia!</h1>
+<div class='container fluid'>
+	<div class='row'>
+		<div class='col-sm-12 col-lg-8 col-lg-offset-2' id='container'>
+			<div class='text-center' id='title'>
+				<img src="http://fontmeme.com/permalink/170325/ff38e0d290618c987dc1645a0aafb9a5.png" alt="star-trek-font" border="0">
 			</div>
+			<div class='text-center' id="timer"></div>
    			<br/>
-  			<div class='col-sm-11'id='quiz'></div>
+  			<div class='col-sm-11 col-lg-12'id='quiz'></div>
     		<div class='button' id='next'><a href='#'>-></a></div>
     		<div class='button' id='prev'><a href='#'><-</a></div>
     		<div class='button' id='start'> <a href='#'>Start Over</a></div>
     	</div>
+	</div>
+</div>
 		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type='text/javascript' src='assets/javascript.js'></script>
