--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<title>Trivia Project</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<link type='text/css' rel='stylesheet' href='assets/style.css'/>
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans"/>
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open Sans"/>
 	</head>
 	<body>
 <div class='container fluid'>
 	<div class='row'>
 		<div class='col-sm-12 col-lg-8 col-lg-offset-2' id='container'>
 			<div class='text-center' id='title'>
-				<img src="http://fontmeme.com/permalink/170325/ff38e0d290618c987dc1645a0aafb9a5.png" alt="star-trek-font" border="0">
+				<img src="https://fontmeme.com/permalink/170325/ff38e0d290618c987dc1645a0aafb9a5.png" alt="star-trek-font" border="0">
 			</div>
 			<div class='text-center' id="timer"></div>
    			<br/>
