--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     	</div>
 	</div>
 </div>
-		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type='text/javascript' src='assets/javascript.js'></script>
 	</body>
