--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class='row'>
 		<div class='col-sm-12 col-lg-8 col-lg-offset-2' id='container'>
 			<div class='text-center' id='title'>
-				<img src="https://fontmeme.com/permalink/170325/ff38e0d290618c987dc1645a0aafb9a5.png" alt="star-trek-font" border="0">
+				<img src="assets/images/title.png" alt="star-trek-font" border="0">
 			</div>
 			<div class='text-center' id="timer"></div>
    			<br/>
